alignment issue fix

--- a/src/components/about-developer-details/AboutDeveloperDetails.scss
+++ b/src/components/about-developer-details/AboutDeveloperDetails.scss
@@ -6,13 +6,18 @@
     width: calc(25% - 19px);
     display: flex;
     gap: 10px;
+    align-items: center;
     h2 {
       color: var(--orange);
       width: min-content;
       white-space: nowrap;
+      font-size: 22px;
+      line-height: 1.7;
+      font-weight: 600;
     }
     p {
       color: var(--secondary);
+      line-height: 1.2;
     }
   }
 }
